--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,9 +10,13 @@
   </head>
   <body>
     <header>
-      <h1>Whack a Croc</h1>
+      <div id="nav">
+        <h1></h1>
+      </div>
     </header>
-    <main></main>
+    <main>
+      <div id="f"></div>
+    </main>
     <footer>
       <p><a href="Credits.html">References</a> for sourced material.</p>
     </footer>
